# rainy_day

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  GRAFANA_SETUP.md  MONITORING.md  PRODUCTION_ENHANCEMENTS.md  README.md  STRESS_TESTING.md  docker-compose.yml  pyproject.toml  stress_test.ps1  stress_test.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  logging.py
app/middleware/: rate_limit.py
app/models/: __init__.py  weather.py
app/services/: cache.py  cache_warmer.py  weather.py
config/: dev.env  production.env  staging.env
helm/weather-proxy/: Chart.yaml  values.yaml
helm/weather-proxy/templates/: _helpers.tpl  deployment.yaml  service.yaml
monitoring/: alerts.yml  dashboards.yaml  datasources.yaml  grafana-dashboard.json  grafana-dashboards.yml  grafana-datasource.yml  prometheus.yml
tests/: conftest.py  test_cache_warmer.py  test_caching.py  test_health.py  test_rate_limit.py  test_weather.py
tests/unit/: test_cache.py
